--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="radiostopcd">Stop the Radio</string>
     <string name="radiobgcd">Radio Background Image</string>
     <string name="title_activity_dcvsradio2">DCVS Radio</string>
+    <string name="bgimg">Background Image</string>
 </resources>
